# scip-shell

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: expansions.rs  indexer.rs  lib.rs  main.rs  range.rs  resolve.rs  symbols.rs
tests/: cli.rs  index.rs
